--- a/main.bib
+++ b/main.bib
@@ -1,6 +1,17 @@
 
 % Dynamic Symmetry breaking approches
 
+% Symchaff
+@inproceedings{moskewicz2001chaff,
+	title={Chaff: Engineering an efficient SAT solver},
+	author={Moskewicz, Matthew W and Madigan, Conor F and Zhao, Ying and Zhang, Lintao and Malik, Sharad},
+	booktitle={Proceedings of the 38th annual Design Automation Conference},
+	pages={530--535},
+	year={2001},
+	organization={ACM}
+}
+
+% Cosy
 @inproceedings{metin2018cdclsym,
   title={CDCLSym: Introducing Effective Symmetry Breaking in SAT Solving},
   author={Metin, Hakan and Baarir, Souheib and Colange, Maximilien and Kordon, Fabrice},
@@ -10,7 +21,7 @@
   organization={Springer}
 }
 
-
+% SPFS
 @inproceedings{Devriendt12,
 	author    = {Jo Devriendt and
 	Bart Bogaerts and
@@ -23,6 +34,39 @@
 	pages     = {49--56},
 	year      = {2012}
 	
+}
+
+
+% SAT heuristics
+
+% 1 UIP
+@inproceedings{zhang2001efficient,
+	title={Efficient conflict driven learning in a boolean satisfiability solver},
+	author={Zhang, Lintao and Madigan, Conor F and Moskewicz, Matthew H and Malik, Sharad},
+	booktitle={Proceedings of the 2001 IEEE/ACM international conference on Computer-aided design},
+	pages={279--285},
+	year={2001},
+	organization={IEEE Press}
+}
+
+% VSIDS
+@inproceedings{moskewicz2001chaff,
+	title={Chaff: Engineering an efficient SAT solver},
+	author={Moskewicz, Matthew W and Madigan, Conor F and Zhao, Ying and Zhang, Lintao and Malik, Sharad},
+	booktitle={Proceedings of the 38th annual Design Automation Conference},
+	pages={530--535},
+	year={2001},
+	organization={ACM}
+}
+
+% LRB
+@inproceedings{liang2016learning,
+	title={Learning rate based branching heuristic for SAT solvers},
+	author={Liang, Jia Hui and Ganesh, Vijay and Poupart, Pascal and Czarnecki, Krzysztof},
+	booktitle={International Conference on Theory and Applications of Satisfiability Testing},
+	pages={123--140},
+	year={2016},
+	organization={Springer}
 }
 
 % == 
@@ -129,4 +173,33 @@
 }
 
 
+@inproceedings{cook1971complexity,
+	title={The complexity of theorem-proving procedures},
+	author={Cook, Stephen A},
+	booktitle={Proceedings of the third annual ACM symposium on Theory of computing},
+	pages={151--158},
+	year={1971},
+	organization={ACM}
+}
 
+@book{sipser2006introduction,
+	title={Introduction to the Theory of Computation},
+	author={Sipser, Michael},
+	volume={2},
+	year={2006},
+	publisher={Thomson Course Technology Boston}
+}
+
+% Source Wikipedia
+@ARTICLE{4640789,
+	author={B. A. {Trakhtenbrot}},
+	journal={Annals of the History of Computing},
+	title={A Survey of Russian Approaches to Perebor (Brute-Force Searches) Algorithms},
+	year={1984},
+	volume={6},
+	number={4},
+	pages={384-400},
+	keywords={Software algorithms;Search methods;Polynomials;Information processing;Complexity theory;Artificial intelligence},
+	doi={10.1109/MAHC.1984.10036},
+	ISSN={0164-1239},
+	month={Oct},}
