--- a/abbreviations.tex
+++ b/abbreviations.tex
@@ -28,6 +28,7 @@
 
 \newcommand{\Group}[0]{\ensuremath{\mathfrak{S}}}
 
+\newcommand{\support}{\ensuremath{Supp}}
 % Automorphism tool 
 \newcommand{\bliss}{\texttt{bliss}}
 \newcommand{\saucy}{\texttt{saucy3}}
