--- a/introduction.tex
+++ b/introduction.tex
@@ -10,7 +10,7 @@ to combinatorial explosion.
 Over the years, computers scientist have developed many techniques to solve 
 this kind of problems like \emph{constraint programming} (CP) \cite{rossi2006handbook},
 \emph{Propositional Satisfiability} (SAT) \cite{biere2009handbook},
-\emph{Solver Modulo Theory} (SMT) \cite{barrett2018satisfiability}.
+\emph{Satisfiability Modulo Theory} (SMT) \cite{barrett2018satisfiability}.
 
 In this thesis, we focus on \emph{propositional satisfiability} that is used in many
 applications in different domains: \emph{formal methods}: hardware model checking,
