--- a/main.bib
+++ b/main.bib
@@ -190,6 +190,14 @@
 	publisher={Thomson Course Technology Boston}
 }
 
+% Lex leader
+@article{crawford1996symmetry,
+	title={Symmetry-breaking predicates for search problems},
+	author={Crawford, James and Ginsberg, Matthew},
+	year={1996}
+}
+
+
 % Source Wikipedia
 @ARTICLE{4640789,
 	author={B. A. {Trakhtenbrot}},
