--- a/main.tex
+++ b/main.tex
@@ -34,6 +34,9 @@
 %%% Tikz ======================================================================
 \usepackage{tikz}
 \usetikzlibrary{calc, chains, decorations.pathmorphing}
+\usetikzlibrary{shapes.geometric}
+\usetikzlibrary{arrows,shapes,positioning}
+\usetikzlibrary{calc,decorations.markings}
 
 %%% Listings ==================================================================
 \usepackage{listings}
