--- a/symmetryinsat.tex
+++ b/symmetryinsat.tex
@@ -20,16 +20,17 @@ So, the group of permutations of $\Vars$ (i.e. bijections from $\Vars$ to $\Vars
 $\Group(\Vars)$. We say that $g\in \Group(\Vars)$ is a symmetry of $ \varphi$ if following conditions holds:
 \vspace{-1em}
 \begin{itemize}[topsep=1em]
-	\item permutation fixes the formula, $g(\varphi) =  \varphi$ 
-	\item $g$  commutes with the negation: $g(\neg l)  = \neg g(l)$
+	\item permutation fixes the formula, $g.\varphi =  \varphi$ 
+	\item $g$  commutes with the negation: $g.\neg l  = \neg g.l$
 \end{itemize}
 
 The set of symmetries of $\varphi$ is noted $S(\varphi) \subseteq \Group(\Vars)$.
 The sets of symmetries of a formula $\varphi$ preserves the satisfaction,
 for every \emph{complete} assignment $\alpha$, 
-$\alpha \models \varphi \leftrightarrow g(\alpha) \models \varphi$ for $g \in S(\varphi)$.
+$\alpha \models \varphi \leftrightarrow g.\alpha. \models \varphi$ for $g \in S(\varphi)$.
 The group $S(\varphi)$ also acts on (partial) assignments of $\Vars$ as follows: for
-$g \in S(\varphi)$, $\alpha \in \Assignments(\Vars)$, $g.\alpha = \{ g.\ell ~|~ \ell \in \alpha \}$. \hakan{Permutations acts also on clauses}
+$g \in S(\varphi)$, $\alpha \in \Assignments(\Vars)$, $g.\alpha = \{ g.\ell ~|~ \ell \in \alpha \}$,
+and acts also on clauses as follow g.$\omega$ = $\{g.l ~|~ l \in \omega \}$.
 
 
 The next section presents how to compute the set of \emph{generators} of a given formula.
@@ -42,8 +43,8 @@ $\gamma$ a function that apply a mapping : $V \rightarrow C$ where C is a set of
 An automorphism of G is a permutation from its vertices $g :V \rightarrow V$ 
 such that:
 \begin{itemize}
-	\item $\forall (u, v) \in E \implies (g(u), g(v)) \in E$
-	\item $\forall v \in V, \gamma(v) = \gamma(g(v))$
+	\item $\forall (u, v) \in E \implies (g.u, g.v) \in E$
+	\item $\forall v \in V, \gamma(v) = \gamma(g.v)$
 \end{itemize}
 
 The graph automorphism problem is to find if a given graph has a non trivial permutation group. 
@@ -97,7 +98,7 @@ An optimization of this graph is possible with the usage of binary clauses i.e. 
 The clause node can be omitted and we connect the two literals. As we cannot distinguish between the optimized edge 
 and boolean consistency edges, we must check if the produced permutations are spurious. 
 To do so, as we ensure the permutation commutes with the negation it suffice to check:
-$\forall x \in Supp(g), g.\neg x = \neg g.x$.
+$\forall x \in \support(g), g.\neg x = \neg g.x$.
 Roughly speaking, we check if the image of the negation of $x$ is equals to the negation of the image of $x$, for each element $x$ in the support of the permutation.
 This optimization allows to compute symmetries of the problem more efficiently.
 In the previous example, the graph has deleted 12 nodes and 12 edges. More generally,
@@ -165,7 +166,7 @@ introduce an ordering relation between the assignments.
 \end{definition}
 
 Note that $<$ coincides with the lexicographical order on \emph{complete}
-assignments. Furthermore, the $<$ relation is monotonic as expressed in the following proposition.
+assignments. Furthermore, the $<$ relation is monotonic as expressed in the following proposition:
 
 \begin{proposition}[Monotonicity of assignments ordering]
 	\label{prop:monocity_assignments_ordering}
@@ -187,25 +188,18 @@ $min_<([\alpha]_G)$. This \textit{lex-leader} is unique because the lexicographi
 order is a total order.
 The optimal approach to solve a symmetric SAT problem would be to explore
 only one assignment per orbit (for instance each lex-leader). However, finding the
-lex-leader of an orbit is computationally hard~\cite{Luks2004}. 
-
-
-Variable ordering may impact the number of generated constraint and so the performance of
-the underlying SAT solver. Different orders are studied in the literature. 
-One of the simplest order was the sorted variables according to their numbers.
-Some heuristics fo the orders exists, one of them is to exploit structural properties of the 
-problem. In particular, the orbits of the variables in different ways. For example with the occurrences of 
-each variables in the initial problem. This is equivalent to put largest orbits first because each variable 
-on the same orbit must have the same number of occurrences.
+lex-leader of an orbit is computationally hard~\cite{Luks2004}. To avoid exploring 
+symmetry search space, \emph{symmetry breaking predicates} are added to the formula.
+These constraints are true only for the \emph{lex-leader} \cite{crawford1996symmetry}.
 
 
 
 
+%\begin{definition}[Stabilizer of permutation]
+%	Let two permutation $g_1$ and $g_2$, we say that $g_1$  stabilize $g_2$
+%	$$\text{If}~ \support(g_1) \cap \support(g_2) = \emptyset$$
+%\end{definition}
 
-
-The exploitation of symmetries statically is called \emph{static symmetry breaking}.
-It acts like a preprocessor which add \emph{symmetry breaking predicates} (SBP) at the 
-original formula and solve the augmented problem,
 
 \begin{theorem}[Satisfiability preservation SBPs]
 	\label{theorem:satisfiability_preservation_SBPs}
@@ -223,24 +217,52 @@ original formula and solve the augmented problem,
 	$\beta \models \psi$.
 \end{proof}
 
-
+ 
+\hakan{Refaire la figure avec plus de point}
 \begin{figure}
 	\centering
-	\includegraphics[width=2in]{example-image-a}
+%	\includegraphics[width=2in]{fig/assignment-lex-leader}
+	\input{fig/assignment-lex-leader}
 	\caption{One lex-leader per assignment}
 \end{figure}
 
 
+It exists two kind of symmetry breaking, the first one is \emph{full symmetry breaking} and it 
+aims to visit exactly one assignment per orbit (generally the lex-leader). This
+approach is in practice infeasible in the most case due to the exponential number of permutations in a group.
+The second one is \emph{partial symmetry breaking} and it aims to visit at least one assignment per orbit. This approach is easy to set up and bring us to considerable reduction of the search spaces. The used set
+of permutations is generally the set of generators of a formula given by the automorphism tool.
+
+An extremely important point is the chosen lexicographic order.
+Variable ordering may impact the number of generated constraint and so the performance of
+the underlying SAT solver. Different orders are studied in the literature. 
+One of the simplest order was the sorted variables according to their numbers.
+Some others orders exists and exploit structural properties of the 
+problem. In particular, the orbits of the variables in different ways. For example, the variables are chosen 
+with their number of occurrences in the initial problem. This order, is equivalent to put largest orbit first
+and so on, because each variable on the same orbit must have the same number of occurrences.
+Another example of exploiting structural property of the orbit is the usage of \emph{stabilizer}.
+The order choose a variable which maximize the number of stabilized permutations, removes the not stabilized ones and loop over until the empty set. The remaining variables are added to the order to get a complete order.
+
+\subsection{Static symmetry breaking}
+The exploitation of symmetries statically is called \emph{static symmetry breaking}.
+It acts like a preprocessor which add \emph{symmetry breaking predicates} (SBPs) at the 
+original formula and solve the augmented problem. 
+This approach gives good performances in practice but have some drawbacks.
+In the general case,
+the size of the \textit{sbp} can be exponential in the number of variables of
+the problem so that they cannot be totally computed. The underlying SAT solver can 
+ Even in more favorable
+situations, the size of the generated \textit{sbp} is often too large to be
+effectively handled by a SAT solver~\cite{Luks2004}. On the other hand, if
+only a subset of the symmetries is considered then the resulting search pruning
+will not be that interesting and its effectiveness depends heavily on the
+heuristically chosen symmetries \cite{biere2009handbook}.
+
+\hakan{Put a complete exemple}
 
 
-Example:\\
-
-Given the previous CNF formula, and the the increasing variables i.e $1 \leq 2 \leq ... \leq 12$, 
-the given automorphism computed for the formula. Generation of the SBPs for $g_1$
-
-
-
-
+\subsection{Dynamic symmetry breaking}
 
 
 %\begin{proposition}[Satisfiability preservation]
